  o Fixed subtitles positioning removing \p tags from the line. (AMZ)
  o libass support for subtitles on all platforms. (Azzy/AMZ)
  o CSRI support for subtitles on all platforms. (equinox/AMZ)
  o Framegrabs from the video now also includes framenumber in the filename. (jfs)
  o Added a toggleable overscan mask to show which areas might get cropped by televisions. (AMZ)
- Visual Typesetting functionality implemented, which should make typesetting much easier and faster. It supports: (AMZ)
  o Dragging, including support for \move;
  o Rotation on Z axis;
  o Rotation on X/Y axes;
  o Scaling on X/Y axes;
  o Clipping to a rectangle.
- Audio mode changes:
  o Normal and SSA mode have been merged into one, all functionality available to both is now used at once. This is the same behavior as Sabbu has. (AMZ)
  o Next line on commit is now on by default. (AMZ)
  o Auto-commit will never change to the next line. (AMZ)
  o Added an option to, when dragging line start/end markers, snap to keyframes or nearby subtitle start/end markers. This behavior can always be toggled by holding down shift. (AMZ)
  o The "Play" shortcut will always play, regardless of whether it was already playing or not. There is a new shortcut for "Stop". (AMZ)
  o Styles for line start/end markers have changed. (AMZ)
  o Holding down ctrl lets you retime the original line while in Karaoke mode. (AMZ)
  o Middle click will now jump the video to the time under the mouse. (AMZ)
  o Added DirectSound audio output, to avoid using PortAudio under Win32. (AMZ)
  o Switching to a new line in audio mode now centers the line on the grid. (AMZ)
  o Flexibible audio cache names now allow you to have more than one copy of Aegisub open with audio loaded to HD cache. (AMZ)
  o Added Medusa-style (numpad) global timing shortcuts, that can be enabled with the button under the audio display. This is disabled by default. (AMZ)